<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonBlue"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/nueva_cotizacion"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newCoti"
            android:textColor="@color/colorEdit"
            android:textStyle="bold"
            android:textSize="@dimen/titleTextSize"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            fontPath="fonts/flama_condensed_basic.otf"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/marginCenter"
        android:padding="@dimen/marginHorizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/titleTextSize"
            android:gravity="center"
            android:text="@string/cliente"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avisoCliente"
            android:layout_marginHorizontal="@dimen/marginCenter"
            android:gravity="center"
            android:layout_marginTop="@dimen/marginVertical_form"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameCliente"
            android:layout_marginTop="@dimen/marginVertical"
            />
        <EditText
            android:id="@+id/edit_nameCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneCliente"
            android:layout_marginTop="@dimen/marginVertical"
            />
        <EditText
            android:id="@+id/edit_phoneCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adressCliente"
            android:layout_marginTop="@dimen/marginVertical"
            />
        <EditText
            android:id="@+id/edit_adressCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"/>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray_inf"
        android:layout_marginHorizontal="@dimen/marginCenter"
        android:padding="5dp"
        android:gravity="center">
        <Button
            android:id="@+id/coti_btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtonOrange"
            android:text="@string/next"
            android:textSize="@dimen/textButtonSize"
            android:textColor="@color/colorEdit"
            android:textStyle="bold"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>