<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonBlue"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/nueva_cotizacion"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newCoti"
            android:textColor="@color/colorEdit"
            android:textStyle="bold"
            android:textSize="@dimen/titleTextSize"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            fontPath="fonts/flama_condensed_basic.otf"
            tools:ignore="MissingPrefix" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/marginCenter"
        android:padding="@dimen/marginHorizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/titleTextSize"
            android:gravity="center"
            android:text="@string/trabajado"
            fontPaht="fonts/flama_condensed_bold.otf"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTrabajo"
            android:layout_marginTop="@dimen/marginVertical"
            />
        <EditText
            android:id="@+id/edit_nameWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adressTrabajo"
            android:layout_marginTop="@dimen/marginVertical"
            />
        <EditText
            android:id="@+id/edit_adressWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeTrabajo"
            android:layout_marginTop="@dimen/marginVertical"
            />
        <EditText
            android:id="@+id/edit_timeWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray_inf"
        android:layout_marginHorizontal="@dimen/marginCenter"
        android:padding="5dp"
        android:gravity="center">
        <Button
            android:id="@id/coti_btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtonOrange"
            android:text="@string/next"
            android:textSize="@dimen/textButtonSize"
            android:textColor="@color/colorEdit"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/coti_btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorLoginInf"
        android:text="@string/back"
        android:layout_marginVertical="@dimen/marginVertical"
        android:textSize="@dimen/textButtonSize"
        android:textColor="@color/colorEdit"
        android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>