<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_limpio"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.testcomp.marango.elementia.ResetPassword">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@mipmap/entremaestros_vertical" />

    <LinearLayout
        android:id="@+id/reset_viewPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_logo"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/reset_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginCenter"
            android:background="@drawable/background_gray"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:layout_marginVertical="@dimen/marginHorizontal"
                android:text="@string/resetTitle"
                android:textSize="@dimen/titleTextSize"
                android:textStyle="bold"
                fontPath="fonts/flama_condensed_bold.otf"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/reset_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:background="@drawable/background_edittext"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:layout_marginVertical="@dimen/marginVertical_form"
                android:background="@drawable/background_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginCenter"
            android:background="@drawable/background_gray_inf"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/reset_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButtonOrange"
                android:paddingHorizontal="40dp"
                android:text="@string/enviar"
                android:textColor="@color/colorEdit"
                android:textStyle="bold"
                android:textSize="@dimen/textButtonSize"
                fontPath="fonts/flama_condensed_bold.otf"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

        <TextView
            android:id="@+id/reset_show_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:layout_marginTop="10dp"
            android:text="@string/forgotUser"
            android:textStyle="bold"
            fontPath="fonts/flama_condensed_bold.otf"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/reset_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginVertical_form"
            android:backgroundTint="@color/colorLoginInf"
            android:paddingHorizontal="@dimen/marginCenter"
            android:text="@string/back"
            android:textColor="@color/colorEdit"
            android:textStyle="bold"
            fontPath="fonts/flama_condensed_bold.otf"
            android:textSize="@dimen/textButtonSize"
            tools:ignore="MissingPrefix" />
    </LinearLayout>
    <ImageView
        android:id="@+id/image_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@mipmap/banner_marcas"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/reset_viewSopport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/backgorundPopUp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginCenter"
            android:background="@drawable/background_gray"
            android:elevation="1dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/marginHorizontal"
                android:text="@string/forgotUser"
                android:textAlignment="center"
                android:textSize="@dimen/titleTextSize"
                android:textStyle="bold"
                fontPath="fonts/flama_condensed_bold.otf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginVertical"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:text="@string/helpUser" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginCenter"
            android:background="@drawable/background_gray_inf"
            android:elevation="1dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/reset_close_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButtonOrange"
                android:paddingHorizontal="40dp"
                android:text="@string/close"
                android:textColor="@color/colorEdit"
                android:textStyle="bold"
                android:textSize="@dimen/textButtonSize"
                fontPath="fonts/flama_condensed_bold.otf"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
